--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.2.0",
+    "@prisma/client": "^5.9.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "^13.5.6",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
+    "swr": "^2.2.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.9.1"
   }
 }
