--- a/package.json
+++ b/package.json
@@ -10,17 +10,41 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
+    "@dotlottie/react-player": "^1.2.1",
+    "@lhci/utils": "^0.13.0",
+    "@next/third-parties": "^14.1.0",
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@tailwindcss/forms": "^0.5.5",
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "10.4.15",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.8.0",
+    "github-slugger": "^2.0.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
+    "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
-    "swr": "^2.2.4"
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.3",
+    "swr": "^2.2.4",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "prisma": "^5.9.1"
+    "encoding": "^0.1.13",
+    "prisma": "^5.9.1",
+    "sharp": "^0.32.6"
   }
 }
