--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "10.4.15",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "firebase": "^10.8.0",
+    "firebase": "^10.6.0",
     "github-slugger": "^2.0.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
@@ -39,12 +38,14 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.3",
-    "swr": "^2.2.4",
-    "tailwindcss": "^3.4.1"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "encoding": "^0.1.13",
+    "postcss": "^8.4.35",
     "prisma": "^5.9.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "tailwindcss": "^3.4.1"
   }
 }
