--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
+    "bcrypt": "^5.1.1",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
@@ -41,6 +42,7 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.17",
     "encoding": "^0.1.13",
     "postcss": "^8.4.35",
