--- a/package.json
+++ b/package.json
@@ -11,23 +11,30 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
     "@dotlottie/react-player": "^1.2.1",
+    "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "@lhci/utils": "^0.13.0",
     "@next/third-parties": "^14.1.0",
     "@nextui-org/react": "^2.2.9",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.10.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
     "bcrypt": "^5.1.1",
+    "check-password-strength": "^2.0.7",
+    "clsx-tailwind-merge": "^1.0.4",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.6.0",
     "github-slugger": "^2.0.0",
+    "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.4",
+    "nodemailer": "^6.9.10",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
@@ -39,14 +46,16 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.17",
     "encoding": "^0.1.13",
     "postcss": "^8.4.35",
-    "prisma": "^5.9.1",
+    "prisma": "^5.10.2",
+    "react-toastify": "^10.0.4",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.4.1"
   }
