--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "reading-time": "^1.5.0",
@@ -53,6 +54,7 @@
     "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.17",
     "encoding": "^0.1.13",
+    "handlebars-loader": "^1.7.3",
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "react-toastify": "^10.0.4",
