--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/validator": "^13.11.9",
     "autoprefixer": "^10.4.17",
     "encoding": "^0.1.13",
     "handlebars-loader": "^1.7.3",
