--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "check-password-strength": "^2.0.7",
     "clsx-tailwind-merge": "^1.0.4",
@@ -34,7 +35,7 @@
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.4",
-    "nodemailer": "^6.9.10",
+    "nodemailer": "^6.9.11",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "18.2.0",
