--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "check-password-strength": "^2.0.7",
