--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.6.0",
+    "flowbite-react": "^0.7.2",
     "github-slugger": "^2.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
@@ -39,6 +40,7 @@
     "nodemailer": "^6.9.11",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
@@ -55,7 +57,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/validator": "^13.11.9",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "encoding": "^0.1.13",
     "handlebars-loader": "^1.7.3",
     "postcss": "^8.4.35",
