--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@lhci/utils": "^0.13.0",
     "@next/third-parties": "^14.1.0",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.10.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
@@ -31,6 +31,7 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.6.0",
     "flowbite-react": "^0.7.2",
+    "framer-motion": "^11.0.12",
     "github-slugger": "^2.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
@@ -51,7 +52,7 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.3",
-    "swr": "^2.2.4",
+    "swr": "^2.2.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
