update homepage, write, post, card, sign in, login, footer, navbar

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.4",
     "nodemailer": "^6.9.11",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-circular-progressbar": "^2.1.0",
@@ -46,12 +47,14 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.30.2",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.3",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "validator": "^13.11.0"
   },
