--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
     "@dotlottie/react-player": "^1.2.1",
+    "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@lhci/utils": "^0.13.0",
