--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "github-slugger": "^2.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "latest": "^0.2.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.4",
@@ -71,7 +72,7 @@
     "encoding": "^0.1.13",
     "handlebars-loader": "^1.7.3",
     "postcss": "^8.4.35",
-    "prisma": "^5.10.2",
+    "prisma": "^5.14.0",
     "react-toastify": "^10.0.4",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.4.1"
