--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/third-parties": "^14.1.0",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
@@ -24,6 +25,8 @@
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "check-password-strength": "^2.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "clsx-tailwind-merge": "^1.0.4",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
@@ -35,6 +38,7 @@
     "github-slugger": "^2.0.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.372.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.4",
@@ -56,6 +60,8 @@
     "shiki": "^0.14.3",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "validator": "^13.11.0"
   },
   "devDependencies": {
