--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
-GOOGLE_ID = 112865395072-dnrdc6upr1lt2las3e8q4tt5t96n00em.apps.googleusercontent.com
-GOOGLE_SECRET = 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
 
 # NEXT_PUBLIC_BASE_URL= http://localhost:3000
 
 # NEXTAUTH_URL = http://localhost:3000
 # NEXTAUTH_SECRET = mysecretid
-
-# DATABASE_URL="mongodb+srv://kaltimfolks:kaltimfolks2024@cluster0.uacvfka.mongodb.net/blog?retryWrites=true&w=majority"
 
 # FIREBASE = AIzaSyD-wV8l7POFFoKvEGS_PsDV26MNeWxEjjE
 
@@ -19,14 +15,18 @@ GOOGLE_SECRET = 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
 # GOOGLE_ID = 511642203085-d1tnftb4nch2bq6sfecemt0dm559ek5q.apps.googleusercontent.com
 # GOOGLE_SECRET = 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
 
+GOOGLE_ID = 112865395072-dnrdc6upr1lt2las3e8q4tt5t96n00em.apps.googleusercontent.com
+GOOGLE_SECRET = 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
+
 NEXT_PUBLIC_BASE_URL= http://localhost:3000
 NEXTAUTH_URL = http://localhost:3000
 NEXTAUTH_SECRET = mysecretid
 
-DATABASE_URL="mongodb+srv://kaltimfolks:kaltimfolks2024@cluster0.uacvfka.mongodb.net/blog?retryWrites=true&w=majority"
+# Punya KF
+# DATABASE_URL="mongodb+srv://kaltimfolks:kaltimfolks2024@cluster0.uacvfka.mongodb.net/blog?retryWrites=true&w=majority"
 
-# SMTP_EMAIL = maxinegrey438@gmail.com
-# SMTP_GMAIL_PASS ="vtpk iong rivv rdwa"
+# Buat Testing
+DATABASE_URL = "mongodb+srv://informationkaltimfolks:mSFAVbmww5bnfMiG@kaltimfolks.vjbrgqe.mongodb.net/blog?retryWrites=true&w=majority&appName=Kaltimfolks"
 
 SMTP_EMAIL = information.kaltimfolks@gmail.com
 SMTP_GMAIL_PASS = "dqcg vdsd mbel vucl"
@@ -35,8 +35,3 @@ SMTP_PASS = "a31806728f968f"
 
 
 JWT_USER_ID_SECRET="jkOLuHyY9DpVs8Alxn41PuiDm3LAfxDIu3DvgrMIpBE="
-
-
-# NEXT_PUBLIC_BASE_URL= http://89.116.157.40:3000
-
-# NEXTAUTH_URL = http://89.116.157.40:3000
