--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
+    "brace-expansion": "^4.0.0",
     "check-password-strength": "^2.0.7",
     "clsx-tailwind-merge": "^1.0.4",
     "contentlayer": "^0.3.4",
@@ -31,14 +32,20 @@
     "debounce": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "extend": "^3.0.2",
     "firebase": "^10.6.0",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^11.0.12",
     "github-slugger": "^2.0.0",
     "handlebars": "^4.7.8",
+    "is-my-json-valid": "^2.20.6",
+    "json-schema": "^0.4.0",
+    "jsonpointer": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "latest": "^0.2.0",
-    "next": "^13.5.6",
+    "lodash": "^4.17.21",
+    "lodash.template": "^4.5.0",
+    "next": "^13.3.4",
     "next-auth": "^4.24.5",
     "next-contentlayer": "^0.3.4",
     "nodemailer": "^6.9.11",
@@ -50,7 +57,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "reading-time": "^1.5.0",
