--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@next/third-parties": "^14.1.0",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.10.2",
+    "@sanity/icons": "^3.2.0",
+    "@sanity/presentation": "^1.15.13",
+    "@sanity/ui": "^2.3.1",
+    "@sanity/vision": "^3.45.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
@@ -45,19 +49,20 @@
     "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
-    "next": "^13.3.4",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
-    "next-contentlayer": "^0.3.4",
+    "next-sanity": "^9.3.10",
     "nodemailer": "^6.9.11",
+    "quill": "^2.0.2",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-react-commercial": "^1.5.9",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "reading-time": "^1.5.0",
@@ -66,6 +71,7 @@
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "sanity": "^3.45.0",
     "shiki": "^0.14.3",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
