--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ GOOGLE_SECRET = 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
 NEXTAUTH_SECRET = mysecretid
 
 # Punya KF
-#DATABASE_URL="mongodb+srv://kaltimfolks:kaltimfolks2024@cluster0.uacvfka.mongodb.net/blog?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://kaltimfolks:kaltimfolks2024@cluster0.uacvfka.mongodb.net/blog?retryWrites=true&w=majority"
 
 # Buat Testing
-DATABASE_URL = "mongodb+srv://informationkaltimfolks:mSFAVbmww5bnfMiG@kaltimfolks.vjbrgqe.mongodb.net/blog?retryWrites=true&w=majority&appName=Kaltimfolks"
+#DATABASE_URL = "mongodb+srv://informationkaltimfolks:mSFAVbmww5bnfMiG@kaltimfolks.vjbrgqe.mongodb.net/blog?retryWrites=true&w=majority&appName=Kaltimfolks"
 NEXT_PUBLIC_BASE_URL= http://localhost:3000
 NEXTAUTH_URL = http://localhost:3000
 
