--- a/kaltimfolks_ads_sanity/tsconfig.json
+++ b/kaltimfolks_ads_sanity/tsconfig.json
@@ -10,8 +10,9 @@
     "moduleDetection": "force",
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "outDir": "./dist"  // Specify an output directory
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]  // Exclude the output directory
 }
