--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 GOOGLE_ID = 112865395072-dnrdc6upr1lt2las3e8q4tt5t96n00em.apps.googleusercontent.com
 GOOGLE_SECRET = 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
 
-#NEXT_PUBLIC_BASE_URL= https://kaltimfolks.com
-#NEXTAUTH_URL = https://kaltimfolks.com
+NEXT_PUBLIC_BASE_URL= https://kaltimfolks.com
+NEXTAUTH_URL = https://kaltimfolks.com
 NEXTAUTH_SECRET = mysecretid
 
 # Punya KF
@@ -10,8 +10,8 @@ DATABASE_URL="mongodb+srv://kaltimfolks:kaltimfolks2024@cluster0.uacvfka.mongodb
 
 # Buat Testing
 #DATABASE_URL = "mongodb+srv://informationkaltimfolks:mSFAVbmww5bnfMiG@kaltimfolks.vjbrgqe.mongodb.net/blog?retryWrites=true&w=majority&appName=Kaltimfolks"
-NEXT_PUBLIC_BASE_URL= http://localhost:3000
-NEXTAUTH_URL = http://localhost:3000
+#NEXT_PUBLIC_BASE_URL= http://localhost:3000
+#NEXTAUTH_URL = http://localhost:3000
 
 SMTP_EMAIL = information.kaltimfolks@gmail.com
 SMTP_GMAIL_PASS = "dqcg vdsd mbel vucl"
